--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*, *::after, *::before {
+*, *::after, *::before { 
   box-sizing: border-box;
 }
 
@@ -39,4 +39,42 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.card {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: .5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+}
+
+.card.red {
+  color: red;
+}
+
+.card.black {
+  color: black;
+}
+
+.card::before,
+.card::after {
+  position: absolute;
+  content: attr(data-value);
+  font-size: 1rem;
+}
+
+.card::before {
+  top: .5rem;
+  left: .5rem
+}
+
+.card::after {
+  bottom: .5rem;
+  right: .5rem;
+  transform: rotate(180deg);
 }
